# ChatGPT

./: .gitattributes  .gitignore  README.md  UPDATE_LOG.md  package.json  pnpm-lock.yaml  prereq.sh  tsconfig.json  tsconfig.node.json  vite.config.ts
.cargo/: config.toml
.github/workflows/: ci-build.yml  ci-build_arch.yml  release.yml
casks/: chatgpt.rb
public/: awesome.html
scripts/: download.js  sync-version.mjs
src/: main.tsx  normalize.worker.js  routes.tsx  utils.ts
src-tauri/: Cargo.toml  injected.css  tauri.conf.json
src-tauri/capabilities/: fs.json  main.json  remote-chatgpt.json
src-tauri/icons/: icon.icns
src-tauri/injected/: virtualizer-loader.js  virtualizer.js
src-tauri/src/: conf.rs  main.rs  menu.rs  setup.rs  utils.rs
src-tauri/src/app/: cmd.rs  control.rs  menu.rs  mod.rs  setup.rs  window.rs
src/hooks/: useChatModel.ts
src/injected/: virtualizer-loader.ts  virtualizer.ts
src/layout/: index.tsx
src/types/: tauri-globals.d.ts
src/view/: General.tsx
src/view/download/: config.tsx  index.tsx
src/view/model/SyncCustom/: config.tsx  index.tsx
src/view/model/SyncPrompts/: index.tsx
src/view/model/SyncRecord/: index.tsx
src/view/model/UserCustom/: index.tsx
src/view/notes/: config.tsx  index.tsx
