[package]
name = "chatgpt"
version = "1.1.0-rc.0"
authors = ["chirv <inbox@spellboundscentswax.com>"]
description = "ChatGPT Desktop Application"
repository = "https://github.com/SpellboundScents/ChatGPT"
license = "Apache-2.0"
edition = "2024"
rust-version = "1.89.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1.0.66"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.17"
csv = "1.1.6"
thiserror = "1.0.38"
walkdir = "2.3.2"
regex = "1.7.0"
reqwest = "0.11.13"
dark-light = "1.0.0"
tokio = { version = "1.23.0", features = ["macros"] }

# Tauri v2 plugins
tauri = { version = "2", features = ["devtools", "tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-opener = "2"
# optional:
# tauri-plugin-global-shortcut = "2"
# tauri-plugin-log = "2"
# tauri-plugin-positioner = "2"


[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
strip = true
lto = true
opt-level = "s"
